[package]
name = "advent_of_code_2024"
version = "1.0.0"
edition = "2021"

[lib]
name = "advent_of_code_2024_lib"
path = "src/lib.rs"

[[bin]]
name = "advent_of_code_2024_bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
criterion = "0.4.0"
nom = "7.1.1"
regex = "1.11.1"

[[bench]]
name = "all_days"
harness = false
